Add FilterFile skeleton

--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -15,6 +15,7 @@ set(OPENCS_SRC
     model/esm/record/script.cpp
     model/esm/record/setting.cpp
 
+    model/filter/filterfile.cpp
     model/filter/filter.cpp
     model/filter/defaultfilter.cpp
     model/filter/matchfilter.cpp
@@ -46,6 +47,7 @@ set(OPENCS_HDR
     model/esm/record/script.hpp
     model/esm/record/setting.hpp
 
+    model/filter/filterfile.hpp
     model/filter/filter.hpp
     model/filter/defaultfilter.hpp
     model/filter/matchfilter.hpp
